// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`branch catalog (2025-03-26) > DCR failure falls back to pre-registered credentials when available 1`] = `
{
  "authorizationUrl": "https://mcp-server.example.com/authorize?response_type=code&client_id=fallback-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": null,
      "headers": {
        "MCP-Protocol-Version": "2025-03-26",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-authorization-server/mcp",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=fallback-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCP Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2025-03-26) > DCR failure without a fallback stops the flow 1`] = `
{
  "authorizationUrl": null,
  "completed": false,
  "error": "Dynamic Client Registration failed (400). Configure a pre-registered client or enable DCR on the authorization server.",
  "wire": [
    {
      "body": null,
      "headers": {
        "MCP-Protocol-Version": "2025-03-26",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-authorization-server/mcp",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/register",
    },
  ],
}
`;

exports[`branch catalog (2025-03-26) > an issuer that does not match the discovery origin is handled per era 1`] = `
{
  "authorizationUrl": "https://mcp-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": null,
      "headers": {
        "MCP-Protocol-Version": "2025-03-26",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-authorization-server/mcp",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCP Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2025-06-18) > DCR failure falls back to pre-registered credentials when available 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=fallback-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=fallback-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2025-06-18) > DCR failure without a fallback stops the flow 1`] = `
{
  "authorizationUrl": null,
  "completed": false,
  "error": "Dynamic Client Registration failed (400). Configure a pre-registered client or enable DCR on the authorization server.",
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
  ],
}
`;

exports[`branch catalog (2025-06-18) > an issuer that does not match the discovery origin is handled per era 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2025-11-25) > DCR failure falls back to pre-registered credentials when available 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=fallback-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=fallback-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2025-11-25) > DCR failure without a fallback stops the flow 1`] = `
{
  "authorizationUrl": null,
  "completed": false,
  "error": "Dynamic Client Registration failed (400). Configure a pre-registered client or enable DCR on the authorization server.",
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
  ],
}
`;

exports[`branch catalog (2025-11-25) > an issuer that does not match the discovery origin is handled per era 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2026-07-28) > DCR failure falls back to pre-registered credentials when available 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=fallback-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "application_type": "native",
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=fallback-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`branch catalog (2026-07-28) > DCR failure without a fallback stops the flow 1`] = `
{
  "authorizationUrl": null,
  "completed": false,
  "error": "Dynamic Client Registration failed (400). Configure a pre-registered client or enable DCR on the authorization server.",
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "application_type": "native",
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
  ],
}
`;

exports[`branch catalog (2026-07-28) > an issuer that does not match the discovery origin is handled per era 1`] = `
{
  "authorizationUrl": null,
  "completed": false,
  "error": "Authorization server metadata \`issuer\` does not match the authorization server URL it was discovered from (expected "https://auth-server.example.com", got "https://elsewhere.example.com"). RFC 8414 §3.3 requires an exact match; refusing to continue.",
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
  ],
}
`;

exports[`era 2025-03-26 × registration dcr > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://mcp-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": null,
      "headers": {
        "MCP-Protocol-Version": "2025-03-26",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-authorization-server/mcp",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCP Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-03-26 × registration preregistered > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://mcp-server.example.com/authorize?response_type=code&client_id=preregistered-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": null,
      "headers": {
        "MCP-Protocol-Version": "2025-03-26",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-authorization-server/mcp",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=preregistered-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCP Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-06-18 × registration dcr > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-06-18 × registration preregistered > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=preregistered-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=preregistered-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-06-18",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-11-25 × registration cimd > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=https%3A%2F%2Fwww.mcpjam.com%2F.well-known%2Foauth%2Fclient-metadata.json&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://www.mcpjam.com/.well-known/oauth/client-metadata.json",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=https%3A%2F%2Fwww.mcpjam.com%2F.well-known%2Foauth%2Fclient-metadata.json&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-11-25 × registration dcr > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2025-11-25 × registration preregistered > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=preregistered-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=preregistered-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"initialize","params":{"protocolVersion":"2025-11-25","capabilities":{},"clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2026-07-28 × registration cimd > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=https%3A%2F%2Fwww.mcpjam.com%2F.well-known%2Foauth%2Fclient-metadata.json&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://www.mcpjam.com/.well-known/oauth/client-metadata.json",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=https%3A%2F%2Fwww.mcpjam.com%2F.well-known%2Foauth%2Fclient-metadata.json&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2026-07-28 × registration dcr > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=test-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": {
        "application_type": "native",
        "client_name": "Differential Client",
        "grant_types": [
          "authorization_code",
          "refresh_token",
        ],
        "redirect_uris": [
          "http://localhost:3000/oauth/callback/debug",
        ],
        "response_types": [
          "code",
        ],
        "token_endpoint_auth_method": "none",
      },
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/register",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=test-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;

exports[`era 2026-07-28 × registration preregistered > happy ladder: full request sequence 1`] = `
{
  "authorizationUrl": "https://auth-server.example.com/authorize?response_type=code&client_id=preregistered-client-id&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_challenge=<code-challenge>&code_challenge_method=S256&state=<state>&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
  "completed": true,
  "error": null,
  "wire": [
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":1}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
    {
      "body": null,
      "headers": {
        "Accept": "application/json",
        "MCP-Protocol-Version": "2025-11-25",
      },
      "method": "GET",
      "redirect": null,
      "url": "https://mcp-server.example.com/.well-known/oauth-protected-resource/mcp",
    },
    {
      "body": null,
      "headers": {},
      "method": "GET",
      "redirect": null,
      "url": "https://auth-server.example.com/.well-known/oauth-authorization-server",
    },
    {
      "body": "grant_type=authorization_code&code=mock-auth-code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth%2Fcallback%2Fdebug&code_verifier=<code-verifier>&client_id=preregistered-client-id&resource=https%3A%2F%2Fmcp-server.example.com%2Fmcp",
      "headers": {
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://auth-server.example.com/token",
    },
    {
      "body": "{"jsonrpc":"2.0","method":"tools/list","params":{"_meta":{"io.modelcontextprotocol/protocolVersion":"2026-07-28","io.modelcontextprotocol/clientCapabilities":{},"io.modelcontextprotocol/clientInfo":{"name":"MCPJam Inspector","version":"1.0.0"}}},"id":2}",
      "headers": {
        "Accept": "application/json, text/event-stream",
        "Authorization": "Bearer access-token",
        "Content-Type": "application/json",
        "MCP-Protocol-Version": "2026-07-28",
        "Mcp-Method": "tools/list",
      },
      "method": "POST",
      "redirect": null,
      "url": "https://mcp-server.example.com/mcp",
    },
  ],
}
`;
